kanc/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_params/duplicate_labels/implicit.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let f = fun _(~z: Nat, ~z: Nat): Nat {
    Nat.O
};
